--- a/note.html
+++ b/note.html
@@ -10,7 +10,8 @@
 <body>
 	
 	<div class="note_info">
-		<p id="title"> AST101 Lecture 1 November 30, 2016 </p><!--placeholder values to show style-->
+		<input type="text" id="title" value="AST101 Lecture 1 November 30, 2016"></input>
+		<span class="error" visibility="hidden"><%- errors.error_title %></span>
 		<p id="author"> Author: Ryan Healey </p>
 	</div>
 	
