--- a/note.html
+++ b/note.html
@@ -12,7 +12,10 @@
 	<div class="note_info">
 		<input type="text" id="title" value="AST101 Lecture 1 November 30, 2016"></input>
 		<span class="error" visibility="hidden"><%- errors.error_title %></span>
-		<p id="author"> Author: Ryan Healey </p>
+		<p>Author:</p>
+		<p id="author">testname1</p>
+		<p>Course:</p>
+		<p id="course">1234</p>
 	</div>
 	
 	<div class="note-view">
