added navigation bar to note.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>NoteHub</title>
-  
-  
-  
+
+
+
       <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
@@ -37,7 +37,7 @@
           <div class="form_element">
                 <label id="emailField">
                     <span class="label">Email: </span>
-                    <input type = "text" name="email" pattern = "[A-Za-z0-9]+@[A-Za-z0-9]+\.com" placeholder="something@random.com"><br>
+                    <input type = "text" name="email" pattern = "[A-Za-z0-9]+@[A-Za-z0-9.]+\.com" placeholder="something@random.com"><br>
 
                     <span class="error"><%- errors.error_email %></span>
                 </label>
