--- a/note.html
+++ b/note.html
@@ -8,7 +8,18 @@
 </head>
 
 <body>
-	
+	<div id="header">
+		<header id="head">
+    		<div id="header_nav">
+        		<nav>
+            		<a href="#" class="header_nav_bar">My Courses</a>
+            		<a href="#" class="header_nav_bar">All Courses</a>
+         	   		<a href="#" class="header_nav_bar">Search</a>
+        		</nav>
+    		</div>
+		</header>
+	</div>
+
 	<div class="note_info">
 		<p id="title"> AST101 Lecture 1 November 30, 2016 </p><!--placeholder values to show style-->
 		<p id="author"> Author: Ryan Healey </p>
@@ -26,5 +37,7 @@
 		</div>
 	</div>
 
+	
 
 </body>
+
