--- a/note.html
+++ b/note.html
@@ -3,6 +3,7 @@
     <title>NoteHub</title>
 	<meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="css/note_style.css" />
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<script src="js/note.js"></script>
 </head>
@@ -21,12 +22,12 @@
 	</div>
 
 	<div class="note_info">
-		<input type="text" id="title" value="AST101 Lecture 1 November 30, 2016"></input>
-		<span class="error" visibility="hidden"><%- errors.error_title %></span>
-		<p>Author:</p>
-		<p id="author">testname1</p>
-		<p>Course:</p>
-		<p id="course">1234</p>
+		<input type="text" id="title" value="AST101 Lecture 1 November 30, 2016"></input><br>
+		<span class="error" visibility="hidden"><%- errors.error_title %></span><br>
+		<p><b>Author:</b></p><br>
+		<p id="author">testname1</p><br>
+		<p><b>Course:</b></p><br>
+		<p id="course">1234</p><br>
 	</div>
 	
 	<div class="note-view">
@@ -40,8 +41,6 @@
 			<button id="save" type="button">Save Changes</button>
 		</div>
 	</div>
-
-	
 
 </body>
 
