saving notes works but without redirection

--- a/note.html
+++ b/note.html
@@ -11,9 +11,9 @@
 	
 	<div class="note_info">
 		<input type="text" id="title" value="AST101 Lecture 1 November 30, 2016"></input>
-		<span class="error" visibility="hidden"><%- errors.error_title %></span>
+		<!--<span class="error" visibility="hidden"><%- errors.error_title %></span>-->
 		<p>Author:</p>
-		<p id="author">testname1</p>
+		<p id="author">testname2</p>
 		<p>Course:</p>
 		<p id="course">1234</p>
 	</div>
