--- a/note.html
+++ b/note.html
@@ -22,12 +22,14 @@
 	</div>
 
 	<div class="note_info">
+
 		<input type="text" id="title" value="AST101 Lecture 1 November 30, 2016"></input><br>
-		<span class="error" visibility="hidden"><%- errors.error_title %></span><br>
+		<!--><span class="error" visibility="hidden"><%- errors.error_title %></span><br><-->
 		<p><b>Author:</b></p><br>
 		<p id="author">testname1</p><br>
 		<p><b>Course:</b></p><br>
 		<p id="course">1234</p><br>
+
 	</div>
 	
 	<div class="note-view">
