--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <form class="login-form" action = "/login" method="get">
       <div class="Header"><h1>Sign in to NoteHub!</h1></div>
 
-      <div class="form_element"><label id = "usernameField"><input type="text" placeholder="username"/></label></div>
+      <div class="form_element"><label id = "usernameField"><input type="text" name = "username" placeholder="username"/></label></div>
 
-      <div class = "form_element"><label id = "passwordField"><input type="password" placeholder="password"/></label></div>
+      <div class = "form_element"><label id = "passwordField"><input type="password" name = "password" placeholder="password"/></label></div>
 
       <button>login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
