login/signup connects to home page. make note and log out are implemented

--- a/user_home_page.html
+++ b/user_home_page.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Welcome to NoteHub!</title>
 	<link rel="stylesheet" href="css/user_home_page.css">
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src="js/main.js"></script>
 </head>
 <body>
 <div id = "nav-wrapper">
@@ -13,7 +15,8 @@
 		<li><a class = "fakeLink" title = "searchCourses">Search Courses</a></li>
 		<li><a class = "fakeLink" title= "searchUsers">Search Users</a></li>
 		<li><a class = "fakeLink" title = "myNotes">My Notes</a></li>
-		<li><a class = "fakeLink" title = "makeNote">Make Note</a></li>
+		<li><a class = "makeNote" title = "makeNote">Make Note</a></li>
+		<li><a class = "logOut" title = "logOut">Log Out</a></li>
 	</ul>
 
 
