--- a/admin_home_page.html
+++ b/admin_home_page.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Welcome to NoteHub!</title>
 	<link rel="stylesheet" href="css/user_home_page.css">
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src="js/main.js"></script>
 </head>
 <body>
 <div id = "nav-wrapper">
@@ -18,6 +20,7 @@
 		<li><a class = "removeCourse" title = "removeCourse">Remove Course</a></li>
 		<li><a class = "createUser" title = "createUser">Create User</a></li>
 		<li><a class = "addAdmin" title = "addAdmin">Add Admin</a></li>
+		<li><a class = "logOut" title = "logOut">Log Out</a></li>
 	</ul>
 
 
