--- a/note.html
+++ b/note.html
@@ -16,6 +16,7 @@
             		<a href="#" class="header_nav_bar">My Courses</a>
             		<a href="#" class="header_nav_bar">All Courses</a>
          	   		<a href="#" class="header_nav_bar">Search</a>
+         	   		<a href="#" class="header_nav_bar homePage">Home Page</a>
          	   		<a href="#" class="header_nav_bar logOut">Log Out</a>
         		</nav>
     		</div>
