changed the database so reimport the stuff

--- a/user_home_page.html
+++ b/user_home_page.html
@@ -11,9 +11,8 @@
 
 	<h1>Welcome to NoteHub</h1>
 	<ul id= "nav">
-		<li><a class = "fakeLink" title = "allCourses">All Courses</a></li>
+		<li><a class = "allCourses" title = "allCourses">All Courses</a></li>
 		<li><a class = "fakeLink" title = "searchCourses">Search Courses</a></li>
-		<li><a class = "fakeLink" title= "searchUsers">Search Users</a></li>
 		<li><a class = "fakeLink" title = "myNotes">My Notes</a></li>
 		<li><a class = "makeNote" title = "makeNote">Make Note</a></li>
 		<li><a class = "logOut" title = "logOut">Log Out</a></li>
