--- a/note.html
+++ b/note.html
@@ -29,7 +29,7 @@
 		<p><b>Author:</b></p><br>
 		<p id="author">testname1</p><br>
 		<p><b>Course:</b></p><br>
-		<p id="course">1234</p><br>
+		<p id="course">CSC309</p><br>
 
 	</div>
 
