--- a/course_info.html
+++ b/course_info.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%- course.course_code %></title>
 	<link type="text/css" rel="stylesheet" href="css/course_info.css" />
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src="js/info.js"></script>
 </head>
 <body>
 	<div id="header">
-		<h1><%- course.course_code %></h1>
+		<h1 id = "course">Course</h1>
 		<header id="head">
     		<div id="header_nav">
         		<nav>
-            		<a href="#" class="header_nav_bar">My Courses</a>
             		<a href="#" class="header_nav_bar">All Courses</a>
          	   		<a href="#" class="header_nav_bar">Search</a>
          	   		<a href="#" class="header_nav_bar homePage">Home Page</a>
