--- a/course_info.html
+++ b/course_info.html
@@ -11,8 +11,9 @@
 		<header id="head">
     		<div id="header_nav">
         		<nav>
-            		<a href="#" class="header_nav_bar">All Courses</a>
-         	   		<a href="#" class="header_nav_bar">Search</a>
+            		<a href="#" class="header_nav_bar allCourses">All Courses</a>
+         	   		<a href="#" class="header_nav_bar">Search Courses</a>
+         	   		<a href="#" class="header_nav_bar notes">Course Notes</a>
          	   		<a href="#" class="header_nav_bar homePage">Home Page</a>
          	   		<a href="#" class="header_nav_bar logOut">Log Out</a>
         		</nav>
