--- a/note.html
+++ b/note.html
@@ -13,9 +13,7 @@
 		<header id="head">
     		<div id="header_nav">
         		<nav>
-            		<a href="#" class="header_nav_bar">My Courses</a>
-            		<a href="#" class="header_nav_bar">All Courses</a>
-         	   		<a href="#" class="header_nav_bar">Search</a>
+            		<a href="#" class="header_nav_bar">Search Courses</a>
          	   		<a href="#" class="header_nav_bar homePage">Home Page</a>
          	   		<a href="#" class="header_nav_bar logOut">Log Out</a>
         		</nav>
