--- a/noteNoEdit.html
+++ b/noteNoEdit.html
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="css/style.css" />
     <link type="text/css" rel="stylesheet" href="css/note_style.css" />
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-	<script src="js/note.js"></script>
+	<script src="js/note_no_edit.js"></script>
 </head>
 
 <body>
@@ -13,9 +13,7 @@
 		<header id="head">
     		<div id="header_nav">
         		<nav>
-            		<a href="#" class="header_nav_bar">My Courses</a>
-            		<a href="#" class="header_nav_bar">All Courses</a>
-         	   		<a href="#" class="header_nav_bar">Search</a>
+         	   		<a href="#" class="header_nav_bar">Search Courses</a>
          	   		<a href="#" class="header_nav_bar homePage">Home Page</a>
          	   		<a href="#" class="header_nav_bar logOut">Log Out</a>
         		</nav>
@@ -29,7 +27,7 @@
 		<p><b>Author:</b></p><br>
 		<p id="author">testname1</p><br>
 		<p><b>Course:</b></p><br>
-		<p id="course">1234</p><br>
+		<p id="course">CSC309</p><br>
 	</div>
 
 	<div class="note-view">
