rmove course doesnt work still

--- a/admin_home_page.html
+++ b/admin_home_page.html
@@ -16,6 +16,7 @@
 		<li><a class = "myNotes" title = "myNotes">My Notes</a></li>
 		<li><a class = "makeNote" title = "makeNote">Make Note</a></li>
 		<li><a class = "addCourse" title = "addCourse">Add Course</a></li>
+		<li><a class = "removeCourse" title = "removeCourse">Remove Course</a></li>
 		<li><a class = "addAdmin" title = "addAdmin">Add Admin</a></li>
 		<li><a class = "logOut" title = "logOut">Log Out</a></li>
 	</ul>
