--- a/course_info.html
+++ b/course_info.html
@@ -12,7 +12,7 @@
     		<div id="header_nav">
         		<nav>
             		<a href="#" class="header_nav_bar allCourses">All Courses</a>
-         	   		<a href="#" class="header_nav_bar">Search Courses</a>
+         	   		<a href="#" class="header_nav_bar searchCourses">Search Courses</a>
          	   		<a href="#" class="header_nav_bar notes">Course Notes</a>
          	   		<a href="#" class="header_nav_bar homePage">Home Page</a>
          	   		<a href="#" class="header_nav_bar logOut">Log Out</a>
