--- a/noteNoEdit.html
+++ b/noteNoEdit.html
@@ -13,7 +13,7 @@
 		<header id="head">
     		<div id="header_nav">
         		<nav>
-         	   		<a href="#" class="header_nav_bar">Search Courses</a>
+         	   		<a href="#" class="header_nav_bar searchCourses">Search Courses</a>
          	   		<a href="#" class="header_nav_bar homePage">Home Page</a>
          	   		<a href="#" class="header_nav_bar logOut">Log Out</a>
         		</nav>
