--- a/user_home_page.html
+++ b/user_home_page.html
@@ -13,7 +13,7 @@
 	<h1>Welcome to NoteHub</h1>
 	<ul id= "nav">
 		<li><a class = "allCourses" title = "allCourses">All Courses</a></li>
-		<li><a class = "fakeLink" title = "searchCourses">Search Courses</a></li>
+		<li><a class = "searchCourses" title = "searchCourses">Search Courses</a></li>
 		<li><a class = "myNotes" title = "myNotes">My Notes</a></li>
 		<li><a class = "makeNote" title = "makeNote">Make Note</a></li>
 		<li><a class = "logOut" title = "logOut">Log Out</a></li>
