--- a/course_info.html
+++ b/course_info.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>NoteHub</title>
 	<link type="text/css" rel="stylesheet" href="css/course_info.css" />
+	<link rel="stylesheet" href="css/user_home_page.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<script src="js/info.js"></script>
 </head>
