--- a/note.html
+++ b/note.html
@@ -23,11 +23,11 @@
 
 	<div class="note_info">
 		<p><b>Title:</b></p><br>
-		<input type="text" id="title" value="AST101 Lecture 1 November 30, 2016"></input><br>
+		<input type="text" id="title" value=""></input><br>
 		<p><b>Author:</b></p><br>
-		<p id="author">testname1</p><br>
+		<p id="author"></p><br>
 		<p><b>Course:</b></p><br>
-		<input type="text" id="course" value="CSC309"></input><br>
+		<input type="text" id="course" value=""></input><br>
 
 	</div>
 
