--- a/noteNoEdit.html
+++ b/noteNoEdit.html
@@ -23,11 +23,11 @@
 
 	<div class="note_info">
 		<p><b>Title:</b></p><br>
-		<p id="title">AST101 Lecture 1 November 30, 2016</p><br>
+		<p id="title"></p><br>
 		<p><b>Author:</b></p><br>
-		<p id="author">testname1</p><br>
+		<p id="author"></p><br>
 		<p><b>Course:</b></p><br>
-		<p id="course">CSC309</p><br>
+		<p id="course"></p><br>
 	</div>
 
 	<div class="note-view">
