fixed my own error

--- a/indextest.html
+++ b/indextest.html
@@ -37,7 +37,7 @@
           <div class="form_element">
                 <label id="emailField">
                     <span class="label">Email: </span>
-                    <input type = "text" name="email" pattern = "[A-Za-z0-9]+" placeholder="foo@bar.com" required><br>
+                    <input type = "text" name="email" pattern = "[A-Za-z0-9]+@[A-Za-z0-9.]+\.com" placeholder="foo@bar.com" required><br>
 
                     <span class="error"><%- errors.error_email %></span>
                 </label>
